# travel-agent

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
data/: point_valuations.json  transfer_partners.json
src/travel_agent/: config.py  main.py
src/travel_agent/agent/: loop.py  prompts.py  tools.py
src/travel_agent/clients/: amadeus.py  transfer.py
src/travel_agent/display/: booking_guide.py  prompts.py  tables.py
src/travel_agent/models/: points.py  preferences.py  profile.py  session.py  travel.py
tests/: conftest.py  test_changes.py  test_models.py  test_optimizer.py  test_profile.py  test_tools.py  test_transfer.py
